fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,10 @@ body {
 
 h1 {
     color: aliceblue;
+    font-size: 18px;
 }
 
 h3 {
     color: aliceblue;
+    font-size: 14px;
 }
